@@ -2,32 +2,32 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
  * (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
  *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
  * in the United States and other countries.]
  *
  * -------------------------
  * XIntervalSeriesTests.java
  * -------------------------
- * (C) Copyright 2006, 2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2006-2008, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -36,6 +36,7 @@
  * -------
  * 20-Oct-2006 : Version 1, based on XYSeriesTests (DG);
  * 27-Nov-2007 : Added testClear() method (DG);
+ * 10-Apr-2008 : Added testGetXLowValue() and testGetXHighValue() (DG);
  *
  */
 
@@ -59,11 +60,11 @@ import org.jfree.data.xy.XIntervalSeries;
 /**
  * Tests for the {@link XIntervalSeries} class.
  */
-public class XIntervalSeriesTests extends TestCase  
+public class XIntervalSeriesTests extends TestCase
         implements SeriesChangeListener {
 
 	SeriesChangeEvent lastEvent;
-	
+
     public void seriesChanged(SeriesChangeEvent event) {
         this.lastEvent = event;
 	}
@@ -90,29 +91,29 @@ public class XIntervalSeriesTests extends TestCase
      * Confirm that the equals method can distinguish all the required fields.
      */
     public void testEquals() {
-        
+
         XIntervalSeries s1 = new XIntervalSeries("s1");
         XIntervalSeries s2 = new XIntervalSeries("s1");
         assertTrue(s1.equals(s2));
-        
+
         // seriesKey
         s1 = new XIntervalSeries("s2");
         assertFalse(s1.equals(s2));
         s2 = new XIntervalSeries("s2");
         assertTrue(s1.equals(s2));
-        
+
         // autoSort
         s1 = new XIntervalSeries("s2", false, true);
         assertFalse(s1.equals(s2));
         s2 = new XIntervalSeries("s2", false, true);
         assertTrue(s1.equals(s2));
-        
+
         // allowDuplicateValues
         s1 = new XIntervalSeries("s2", false, false);
         assertFalse(s1.equals(s2));
         s2 = new XIntervalSeries("s2", false, false);
         assertTrue(s1.equals(s2));
-        
+
         // add a value
         s1.add(1.0, 0.5, 1.5, 2.0);
         assertFalse(s1.equals(s2));
@@ -130,7 +131,7 @@ public class XIntervalSeriesTests extends TestCase
         assertFalse(s1.equals(s2));
         s2.remove(new Double(1.0));
         assertTrue(s2.equals(s1));
-        
+
     }
 
     /**
@@ -159,7 +160,7 @@ public class XIntervalSeriesTests extends TestCase
         XIntervalSeries s1 = new XIntervalSeries("s1");
         s1.add(1.0, 0.5, 1.5, 2.0);
         XIntervalSeries s2 = null;
-        
+
         try {
             ByteArrayOutputStream buffer = new ByteArrayOutputStream();
             ObjectOutput out = new ObjectOutputStream(buffer);
@@ -177,7 +178,7 @@ public class XIntervalSeriesTests extends TestCase
         assertEquals(s1, s2);
 
     }
-    
+
     /**
      * Simple test for the indexOf() method.
      */
@@ -188,7 +189,7 @@ public class XIntervalSeriesTests extends TestCase
         s1.add(3.0, 3.0, 3.0, 4.0);
         assertEquals(0, s1.indexOf(new Double(1.0)));
     }
-    
+
     /**
      * A check for the indexOf() method for an unsorted series.
      */
@@ -197,9 +198,9 @@ public class XIntervalSeriesTests extends TestCase
         s1.add(1.0, 1.0, 1.0, 2.0);
         s1.add(3.0, 3.0, 3.0, 3.0);
         s1.add(2.0, 2.0, 2.0, 2.0);
-        assertEquals(0, s1.indexOf(new Double(1.0)));        
-        assertEquals(1, s1.indexOf(new Double(3.0)));        
-        assertEquals(2, s1.indexOf(new Double(2.0)));        
+        assertEquals(0, s1.indexOf(new Double(1.0)));
+        assertEquals(1, s1.indexOf(new Double(3.0)));
+        assertEquals(2, s1.indexOf(new Double(2.0)));
     }
 
     /**
@@ -211,18 +212,18 @@ public class XIntervalSeriesTests extends TestCase
         s1.add(2.0, 2.0, 2.0, 2.0);
         s1.add(3.0, 3.0, 3.0, 3.0);
         assertEquals(3, s1.getItemCount());
-        
+
         s1.remove(new Double(2.0));
         assertEquals(new Double(3.0), s1.getX(1));
-        
+
         s1.remove(new Double(1.0));
-        assertEquals(new Double(3.0), s1.getX(0));    
+        assertEquals(new Double(3.0), s1.getX(0));
     }
 
     private static final double EPSILON = 0.0000000001;
-    
+
     /**
-     * When items are added with duplicate x-values, we expect them to remain 
+     * When items are added with duplicate x-values, we expect them to remain
      * in the order they were added.
      */
     public void testAdditionOfDuplicateXValues() {
@@ -238,7 +239,7 @@ public class XIntervalSeriesTests extends TestCase
         assertEquals(4.0, s1.getYValue(3), EPSILON);
         assertEquals(5.0, s1.getYValue(4), EPSILON);
     }
-    
+
     /**
      * Some checks for the add() method for an UNSORTED series.
      */
@@ -259,7 +260,7 @@ public class XIntervalSeriesTests extends TestCase
         assertEquals(2.2, series.getYValue(5), EPSILON);
         assertEquals(1.1, series.getYValue(6), EPSILON);
     }
-    
+
     /**
      * A simple check that the maximumItemCount attribute is working.
      */
@@ -274,7 +275,7 @@ public class XIntervalSeriesTests extends TestCase
         assertEquals(2.0, s1.getX(0).doubleValue(), EPSILON);
         assertEquals(3.0, s1.getX(1).doubleValue(), EPSILON);
     }
-    
+
     /**
      * Check that the maximum item count can be applied retrospectively.
      */
@@ -287,7 +288,7 @@ public class XIntervalSeriesTests extends TestCase
         assertEquals(2.0, s1.getX(0).doubleValue(), EPSILON);
         assertEquals(3.0, s1.getX(1).doubleValue(), EPSILON);
     }
-    
+
     /**
      * Some checks for the clear() method.
      */
@@ -302,6 +303,28 @@ public class XIntervalSeriesTests extends TestCase
         s1.clear();
         assertNotNull(this.lastEvent);
         assertTrue(s1.isEmpty());
-    } 
-    
+    }
+
+    /**
+     * A simple check for getXLowValue().
+     */
+    public void testGetXLowValue() {
+    	XIntervalSeries s1 = new XIntervalSeries("S1");
+        s1.add(1.0, 2.0, 3.0, 4.0);
+        assertEquals(2.0, s1.getXLowValue(0), EPSILON);
+        s1.add(2.0, 1.0, 4.0, 2.5);
+        assertEquals(1.0, s1.getXLowValue(1), EPSILON);
+    }
+
+    /**
+     * A simple check for getXHighValue().
+     */
+    public void testGetXHighValue() {
+    	XIntervalSeries s1 = new XIntervalSeries("S1");
+        s1.add(1.0, 2.0, 3.0, 4.0);
+        assertEquals(3.0, s1.getXHighValue(0), EPSILON);
+        s1.add(2.0, 1.0, 4.0, 2.5);
+        assertEquals(4.0, s1.getXHighValue(1), EPSILON);
+    }
+
 }
